--- a/css/master.css
+++ b/css/master.css
@@ -257,24 +257,35 @@ span,
   border: 1px solid red;
 }
 
-#now-playing {
+#controls-container {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 80px;
+  height: 60px;
   background: black;
   color: white;
   padding-left: 25px;
   font-size: 18px;
   font-weight: 100;
-  padding-top: 30px;
+  padding-top: 5px;
+  display: inline;
+}
+
+#controls-container p {
+  display: inline;
 }
 
 #soundcloud-link {
   position: relative;
   float: right;
-  top: -10px;
   padding-right: 25px;
+}
+
+.control {
+  position: relative;
+  top: 8px;
+  left: 40px;
+  height: 30px;
 }
 
 /*************** MEDIA QUERIES ***************/
